
//! [`ToProtobuf`] and [`FromProtobuf`] impls for various fields
//! 
//! [`ToProtobuf`]: crate::bridge::ToProtobuf
//! [`FromProtobuf`]: crate::bridge::FromProtobuf

mod addon_detail;
mod addons_with_filters;
mod catalogs_with_extra;
mod continue_watching_preview;
mod ctx;
mod discover;
mod library;
mod library_by_type;
mod link;
mod meta_details;
mod player;
mod streaming_server;
